--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,10 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.46.1"
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
-
-
+    //Glide
+    def glide_version = "4.15.1"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
